# rr_python_sdk

./: .gitignore  .gitmodules  CMakeLists.txt  Example usage.ipynb  MANIFEST.in  README.md  Tests.ipynb  pyproject.toml  setup.py
.github/workflows/: pull-request-build-check.yml  release-wheels.yml  wheels.yml
rr_python_sdk/: __init__.py  _build.py  library.py  wrapper.py
src/: bindings.cpp  generated_bindings.cpp  generated_payload_switch.cpp
tools/: _build.py  gen_payload_switch.py  gen_pybind_glue.py
